# docs/swagger.yaml
@@ -191,6 +191,78 @@ paths:
       summary: Получить результаты бенчмарков по всем архитектурам и метрикам
       tags:
       - Benchmark
+  /api/benchmark/mock:
+    get:
+      description: Возвращает только бенчмарки с постфиксом Mock в имени функции.
+      parameters:
+      - description: Метрика (mean, median, stddev, min, max)
+        in: query
+        name: metric
+        required: true
+        type: string
+      - description: Архитектура (arm64, amd64)
+        in: query
+        name: arch
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.BenchmarkResults'
+        "400":
+          description: Ошибка в запросе из-за отсутствия параметров
+          schema:
+            type: object
+        "404":
+          description: Данные не найдены
+          schema:
+            type: object
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            type: object
+      summary: Получить результаты только Mock-функций
+      tags:
+      - Benchmark
+  /api/benchmark/not-mock:
+    get:
+      description: Возвращает только бенчмарки без постфикса Mock в имени функции.
+      parameters:
+      - description: Метрика (mean, median, stddev, min, max)
+        in: query
+        name: metric
+        required: true
+        type: string
+      - description: Архитектура (arm64, amd64)
+        in: query
+        name: arch
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.BenchmarkResults'
+        "400":
+          description: Ошибка в запросе из-за отсутствия параметров
+          schema:
+            type: object
+        "404":
+          description: Данные не найдены
+          schema:
+            type: object
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            type: object
+      summary: Получить результаты только "реальных" функций (без Mock)
+      tags:
+      - Benchmark
   /api/design:
     post:
       consumes:
